# mcp-adk-rust

./: .gitignore  GEMINI.md  Makefile  README.md  init.sh  requirements.txt  set_env.sh
basic_agent/: agent.py  requirements.txt
hello_agent/: agent.py
hello_agent/.adk/: session.db
mcp-cloudrun-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml
mcp-cloudrun-rust/.gemini/: settings.json  settings.json.cloudrun  settings.json.https
mcp-cloudrun-rust/src/: main.rs
