[package]
name = "mcp-https-rust"
version = "0.1.0"
edition = "2024"
description = "Hello World streaming http MCP"
license = "MIT"
repository = "https://github.com/xbill9/mcp-adk-rust"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
reqwest = { version = "0.13.3", features = ["json"] }
rmcp = { version = "1.6.0", features = ["auth", "server","macros", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
